browser adapter: using margin instead of gap to avoid browser compatibility issues

--- a/app/src/assets/editor.less
+++ b/app/src/assets/editor.less
@@ -85,9 +85,10 @@
 }
 
 .editor-toolbar {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-auto-flow: column;
   align-items: flex-end;
   gap: 4px;
-  margin: 4px 0;
+  width: max-content;
+  margin: 4px 0 4px auto;
 }
