--- a/app/src/assets/generation.less
+++ b/app/src/assets/generation.less
@@ -44,7 +44,6 @@
     align-items: center;
     flex-grow: 1;
     padding: 15vh 0;
-    gap: 2rem;
 
     .box {
       display: flex;
@@ -148,7 +147,7 @@
   display: flex;
   flex-direction: row;
   width: 80%;
-  margin: 0 auto;
+  margin: 2rem auto;
   max-width: 680px;
 
   .input {
